--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,9 @@
 @import "./utils/variables";
-@import "./utils/functions";
 @import "./utils/mixins";
 
 @import "./base/base";
 
-@import "./layout/header";
+@import "./pages/header";
 
 @import "./pages/competences";
 @import "./pages/contact";
