--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -4,5 +4,6 @@ $colour-tertiary: #ffd5ca;
 $colour-quaternary: #fffdd8;
 $colour-quinary: #ffb400;
 $colour-senary: #dae7e9;
+$colour-septenary: #fffdd8fc;
 
 $title-size: 2.5em;
